# ChangeLog for dev-perl/Perl-Critic
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.49 2009/02/03 07:57:48 tove Exp $

*Perl-Critic-1.096 (03 Feb 2009)

  03 Feb 2009; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.096.ebuild:
  Version bump

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org>
  Perl-Critic-1.094.001.ebuild:
  Marked ~ppc for bug #253430.

*Perl-Critic-1.094.001 (02 Jan 2009)

  02 Jan 2009; Torsten Veller <tove@gentoo.org>
  +Perl-Critic-1.094.001.ebuild:
  Version bump

*Perl-Critic-1.092 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org>
  +Perl-Critic-1.092.ebuild:
  Version bump.

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Perl-Critic-1.061.ebuild,
  Perl-Critic-1.082.ebuild, Perl-Critic-1.090.ebuild:
  New virtuals: module-build Module-Pluggable version

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Perl-Critic-1.03.ebuild,
  -Perl-Critic-1.05.ebuild, -Perl-Critic-1.05.1.ebuild,
  -Perl-Critic-1.05.3.ebuild, -Perl-Critic-1.06.ebuild:
  Cleanup

  28 Jul 2008; Torsten Veller <tove@gentoo.org> Perl-Critic-1.082.ebuild:
  Perl-Critic-1.082 depends on dev-perl/PPI-1.201 (#219164)

*Perl-Critic-1.090 (28 Jul 2008)

  28 Jul 2008; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.090.ebuild:
  Version bump

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org> Perl-Critic-1.082.ebuild:
  sparc/x86 stable

  19 Jun 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
  Perl-Critic-1.082.ebuild:
  mark ~ppc (bug #219164)

  23 May 2008; Samuli Suominen <drac@gentoo.org> Perl-Critic-1.082.ebuild:
  ~amd64 wrt #219164

  24 Apr 2008; Ferris McCormick <fmccor@gentoo.org>
  Perl-Critic-1.082.ebuild:
  Add ~sparc for testing, Bug #219164, most tests pass.

*Perl-Critic-1.082 (24 Apr 2008)

  24 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Perl-Critic-1.082.ebuild:
  Version bump, keywords dropped due to a new dep on dev-perl/Readonly
