@@ -4,11 +4,13 @@ DIST Perl-Critic-1.090.tar.gz 371967 RMD160 657816c45b99ebed92868b3251e3c6285307
 DIST Perl-Critic-1.092.tar.gz 377192 RMD160 02c9bf37e8d81b7523f7b8642403ae4e65eceb28 SHA1 64e9e4af3b4f1651b7623a4ab39c033e95f4c15f SHA256 88e7b2bad7f7fbe2921452950c381aa668890febc97810313e74e014ea2da1f1
 DIST Perl-Critic-1.094001.tar.gz 402601 RMD160 7407661beca718e92d9bbbaddb434593a7f52b42 SHA1 7571f070d4af4c585670204b9f9cc50eff1cceec SHA256 e71f1effb980df6b535859bc57c23f1a7bb19648dc9450c017f27f17bf806677
 DIST Perl-Critic-1.096.tar.gz 409036 RMD160 e0e8e6c3c9f4bfb21f05e01042025d94f3e39751 SHA1 07fb9febf44a097dc00530facdb241fe091af24d SHA256 5ba8a2b6a2ef65beeae9484005b700fcb267e7568125f3cd6afb2e468e15af66
+DIST Perl-Critic-1.098.tar.gz 425245 RMD160 f550f603588ee4dff32e96ef990c4b82e834932c SHA1 8ccb7cfc8529808ea74bce82ed80e6677f09ca17 SHA256 0a6f31202427994756c531d1f20ec592d3385e024ebd0f8a1258057be64671fc
 EBUILD Perl-Critic-1.061.ebuild 939 RMD160 3566a7a80a63ce0b30a038b99b64eb0a4e188f65 SHA1 2672362988cc05ee67731886cbc409706d246f76 SHA256 522c6e489574d572d0d24a5bcfad0f5ed52c5804fa16cda2299a98d6ba43fe21
 EBUILD Perl-Critic-1.082.ebuild 974 RMD160 0cb354b2260d2be7fc6eb8a9313112e924b3c8a5 SHA1 6ed0473b40375e6a84b5d9030aacf31e47bf1e0c SHA256 e2a78f1a26f02598a016b451621b8a57c1045eba74e38a43ef03056b4b4716d4
 EBUILD Perl-Critic-1.090.ebuild 1030 RMD160 9d8aec946737bdb0304dc91bca995c0856db21b1 SHA1 2617793b290d7932fb347f033e5af3adc733c304 SHA256 7160336c7ae683692cea10747fa7bf13e535c13c5e72e3f2b0298bb92306b982
 EBUILD Perl-Critic-1.092.ebuild 975 RMD160 cb5322cbc52c4f28ce6f1d9c1cf84b9b96b1b012 SHA1 4975d9efa8566e6bfbc2838b5eaaf3042e5b29a2 SHA256 1b5a7d457cfb0b1d8a8605b586a5e0925014ecadd44cfdd2670a64a2b87368be
 EBUILD Perl-Critic-1.094.001.ebuild 1084 RMD160 3cbbb4d930ba556a32cd8183fd3b48c66dbdf201 SHA1 cda6151998379042b333309668712909b880d249 SHA256 688f5ebe143a6d8696155e4b893ac57222cbd9c8573098e5eedcd2b358649bb9
 EBUILD Perl-Critic-1.096.ebuild 1081 RMD160 c759d4d804b7523dce63372d95afdce89172a7ab SHA1 9bcbbc78d754c488a22ba12c69df024c48f3a467 SHA256 f74aac4757823a690efdc4fa5a66818cde5ebe43ebb63c2c0a876f2c1f4e7efe
-MISC ChangeLog 6691 RMD160 4fdb578d04a42d99f6401ffaac87228165b1f372 SHA1 ab7c75f3aa938802be582550f9e4b93a71a9e0fd SHA256 d8cba4bb4db1c5d13ec67036fb3a595230b19dcc854fa9f5526073d91d2ca63f
+EBUILD Perl-Critic-1.098.ebuild 1036 RMD160 842456fb3c1babbef1e2ea967eec41c985ee1c70 SHA1 626d2e8729eaa523eb5353050a43dca49556a6cc SHA256 cae2c74751e3e4f71f6b5e03fe425d8169c90b790c48d611560295b9e21659d8
+MISC ChangeLog 6816 RMD160 7073fb19cb8d817c5e9d01920a61de68ff14a00d SHA1 293865811843028fef92a01b32a248aaa8fcd614 SHA256 d81cd91c481aced42f9191d2ac4cfac921a5d7bb2ff2a6e39e04fcbcba91ffc7
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
