@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Perl-Critic
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.49 2009/02/03 07:57:48 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.50 2009/03/08 18:43:17 tove Exp $
+
+*Perl-Critic-1.098 (08 Mar 2009)
+
+  08 Mar 2009; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.098.ebuild:
+  Version bump
 
 *Perl-Critic-1.096 (03 Feb 2009)
 
